# docs/api/swagger.json
@@ -266,13 +266,22 @@
         }
       }
     },
-    "/api/GenericPEM/GetGenericPEM": {
+    "/api/GenericPEM/GetGenericPEM/{segmentId}": {
       "get": {
         "tags": [
           "GenericPEM"
         ],
-        "summary": "Get Project Dropdown",
+        "summary": "Get PEMs",
         "parameters": [
+          {
+            "name": "segmentId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          },
           {
             "name": "api-version",
             "in": "header",
@@ -340,6 +349,159 @@
               "text/json": {
                 "schema": {
                   "$ref": "#/components/schemas/ProjectResponseDtoListApiResponse"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/ProjectDocumentChecklists/GetProjectDocumentChecklists/{projectDocumentId}": {
+      "get": {
+        "tags": [
+          "ProjectDocumentChecklists"
+        ],
+        "summary": "Get Project Document Checklists",
+        "parameters": [
+          {
+            "name": "projectDocumentId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          },
+          {
+            "name": "api-version",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProjectDocumentChecklistsResponseDtoListApiResponse"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProjectDocumentChecklistsResponseDtoListApiResponse"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProjectDocumentChecklistsResponseDtoListApiResponse"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/ProjectDocumentChecklists/SaveCheckResults": {
+      "post": {
+        "tags": [
+          "ProjectDocumentChecklists"
+        ],
+        "summary": "Save Check Results of Checkpoints",
+        "parameters": [
+          {
+            "name": "api-version",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "description": "",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/SaveCheckResultsRequestDto"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/SaveCheckResultsRequestDto"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/SaveCheckResultsRequestDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/SaveCheckResultsResponseDtoApiResponse"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SaveCheckResultsResponseDtoApiResponse"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SaveCheckResultsResponseDtoApiResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/ObjectApiResponse"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ObjectApiResponse"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ObjectApiResponse"
+                }
+              }
+            }
+          },
+          "409": {
+            "description": "Conflict",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/ObjectApiResponse"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ObjectApiResponse"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ObjectApiResponse"
                 }
               }
             }
@@ -519,7 +681,7 @@
         "tags": [
           "ProjectDocuments"
         ],
-        "summary": "Get Project Documents",
+        "summary": "Send Email",
         "parameters": [
           {
             "name": "api-version",
@@ -1116,9 +1278,81 @@
         },
         "additionalProperties": false
       },
+      "ProjectDocumentChecklistsResponseDto": {
+        "type": "object",
+        "properties": {
+          "checkpointId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "checkpoint": {
+            "type": "string",
+            "nullable": true
+          },
+          "category": {
+            "type": "string",
+            "nullable": true
+          },
+          "qualityLevel": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "nullable": true
+          },
+          "checkResult": {
+            "type": "string",
+            "nullable": true
+          },
+          "originatorSignature": {
+            "type": "string",
+            "nullable": true
+          },
+          "checkerSignature": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "ProjectDocumentChecklistsResponseDtoListApiResponse": {
+        "type": "object",
+        "properties": {
+          "message": {
+            "type": "string",
+            "nullable": true
+          },
+          "status": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "data": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ProjectDocumentChecklistsResponseDto"
+            },
+            "nullable": true
+          },
+          "errors": {
+            "type": "object",
+            "additionalProperties": {
+              "type": "array",
+              "items": {
+                "type": "string"
+              }
+            },
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
       "ProjectDocumentsResponseDto": {
         "type": "object",
         "properties": {
+          "projectDocumentId": {
+            "type": "integer",
+            "format": "int32"
+          },
           "documentName": {
             "type": "string",
             "nullable": true
@@ -1166,6 +1400,10 @@
           "documentTypeId": {
             "type": "integer",
             "format": "int32"
+          },
+          "workflowStatus": {
+            "type": "string",
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -1275,6 +1513,65 @@
         },
         "additionalProperties": false
       },
+      "SaveCheckResultsRequestDto": {
+        "type": "object",
+        "properties": {
+          "checkpointId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "checkResult": {
+            "type": "string",
+            "nullable": true
+          },
+          "originatorSignature": {
+            "type": "string",
+            "nullable": true
+          },
+          "checkerSignature": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "SaveCheckResultsResponseDto": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          }
+        },
+        "additionalProperties": false
+      },
+      "SaveCheckResultsResponseDtoApiResponse": {
+        "type": "object",
+        "properties": {
+          "message": {
+            "type": "string",
+            "nullable": true
+          },
+          "status": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "data": {
+            "$ref": "#/components/schemas/SaveCheckResultsResponseDto"
+          },
+          "errors": {
+            "type": "object",
+            "additionalProperties": {
+              "type": "array",
+              "items": {
+                "type": "string"
+              }
+            },
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
       "SystemResponseDto": {
         "type": "object",
         "properties": {
@@ -1337,6 +1634,9 @@
     },
     {
       "name": "Project"
+    },
+    {
+      "name": "ProjectDocumentChecklists"
     },
     {
       "name": "ProjectDocuments"
